--- a/src/input.css
+++ b/src/input.css
@@ -5,3 +5,13 @@
 .bg-page{
     background-color: #f7f7f7;
 }
+.bg-settings{
+    background-size: 30%;
+    background-repeat: no-repeat;
+    background-position: 70% 0%;
+}
+.bebas-neue-regular {
+    font-family: "Bebas Neue", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+  }
