--- a/src/input.css
+++ b/src/input.css
@@ -18,3 +18,8 @@
     font-weight: 400;
     font-style: normal;
 }
+.rajdhani-regular {
+    font-family: "Rajdhani", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+  }
