--- a/src/input.css
+++ b/src/input.css
@@ -23,3 +23,8 @@
     font-weight: 400;
     font-style: normal;
   }
+  .rajdhani-bold {
+    font-family: "Rajdhani", sans-serif;
+    font-weight: 600;
+    font-style: normal;
+  }
